# minutes

./: .gitignore  CHANGELOG.md  README.md  copilot-instuctions.md  disconnect_cisco_vpn.sh  manifest_mistral_test.json  pyproject.toml  requirements.txt  run_minutes_cron.sh
.github/: copilot-instructions.md
src/meeting_summary/: __init__.py  cli.py  config.py  drive_client.py  gemini_summarizer.py  manifest.py  ollama_client.py  ollama_manager.py  ollama_summarizer.py  openai_client.py  service.py  summarizer.py
src/minutes/: config.py  drive_client.py  manifest.py  ollama_summarizer.py  openai_summarizer.py  service.py  summary_schema.py
tests/: test_drive_client.py  test_gemini_summarizer.py  test_manifest.py  test_ollama_client.py  test_ollama_summarizer.py  test_render.py  test_service.py  test_structured_extraction.py
