[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minutes"
version = "1.0.1"
description = "Google Drive transcript summarizer"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
minutes = "minutes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
